--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: java
+sudo: true
+dist: trusty
 jdk: openjdk8
+addons:
+  apt:
+    packages:
+      - openjdk-8-jre
+      - before_install:
+          - chmod +x mvnw
