--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ jdk: openjdk8
 addons:
   apt:
     packages:
-      - openjdk-8-jre
+      - sudo apt-get install openjdk-8-jre
       - before_install:
           - chmod +x mvnw
