--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ addons:
   apt:
     packages:
       - sudo apt-get install openjdk-8-jre
-      - before_install:
+       before_install:
           - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
