--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ jdk: openjdk8
 install: -./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 addons:
   apt:
+    update: true
     packages:
       - sudo apt-get install openjdk-8-jre
