--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 sudo: true
 dist: trusty
 jdk: openjdk8
+install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script:
+  - mvn test
 addons:
   apt:
     update: true
